public/assets/css/app.css
/* ... */
.avatar-min {
    width:1.2em;
    height: 1.2em;
    border: 0 solid #555;
    background-color: var(--bg-avatar);
    overflow: hidden;
    border-radius: .1em
}
.avatar-min-none {
    width:1.2em;
    height: 1.2em;
    overflow: hidden;
    background-color: var(--bg-avatar);
    border-radius: .1em
}
.avatar-min img {
    width: 1.2em;
    height: 1.2em;
    padding: 0;
    margin: 0;
    border-radius: .1em
}
.avatar-none {
    width:2.6em;
    height: 2.6em;
    background-color: var(--bg-avatar);
    border-radius: .1em;
    border:1px solid var(--bd-avatar)
}
.avatar img {
    width: 2.6em;
    height: 2.6em;
    padding: 0;
    margin: 0
}
.attachment {
    width: 100%;
    object-fit: cover;
    height: 10em;
    border-radius: .3rem
}
.attachment-box .wrapper {
    overflow: hidden;
    display: inherit;
    border-radius: .3rem;
}
.navigator {
    color: var(--fg-navigator);
    background: var(--bg-navigator);
    padding: .1em .5em;
    text-decoration: none;
    word-break: keep-all;
    border-radius: .1em
}
.navigator a {
    color: var(--fg-navigator-link);
}

.float-right {
    float: right;
}
.footer a{
    color: var(--fg-link);
    text-decoration: underline;
}
.ellipse {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.blog {
    padding: 1em .5em;
    border-radius: .2em;
}
.blog, .container {
    background-color: var(--bg-container);
    padding: 1em .5em;
    border-radius: .2em;
}
.counts .btn {
    background-color: var(--bg-counter);
    color: var(--fg-counter);
}
.content-header-name, .content-header-name a {
    color: var(--fg-content-header);
}
.content-header-account a {
    color: var(--fg-content-header-link);
}
.content-header-date {
    color: var(--fg-content-header-date);
}
.content {
    color: var(--fg-content);
}
.content blockquote {
    margin: 0;
}
.content a, .nav a{
    color: var(--fg-link);
}
.content p {
    margin: .6em 0;
    word-break: break-all;
}
.content br {
    display: block;
    margin: .5em 0;
    content: " "
}
.content img {
    max-width: 100%;
    font-weight: normal;
}
.content img:not(.emoji) {
    width: 100%;
    max-height: 20em;
    object-fit: contain;
    background-color: var(--bg-content-image);
    border-radius: .3rem;
}
.content h2 {
    font-size: 1rem;
}
.blur {
    filter: blur(1.5rem);
    object-fit: cover;
}
.poll ul {
    padding: 0;
}
.poll .choice, .poll .progress {
    color: var(--fg-choice);
    margin: .3em 0;
    list-style: none;
}
.poll .choice {
    color: var(--fg-choice);
    margin: .3em 0 0 0;
    list-style: none;
}
.poll .progress {
    height: 5px;
    background-color: var(--bg-progress);
    border-radius: .3em;
}
.poll .progress.selected {
    background-color: var(--bg-progress-selected);
}
.poll .details {
    color: var(--fg-poll-details);
}
.content-others .toggled {
    color: var(--fg-toggled);
}
.content-others .disabled {
    color: var(--fg-disabled);
}
.content-others, .content-others a, .content-others button {
    color: var(--fg-content-header-date);
}
.content-others a{
    text-decoration: none;
}
.emoji {
    height: 1.0em;
}
.cw-btn > span {
    cursor: pointer;
    background-color: var(--bg-cw-button);
    border-radius: .2em;
    padding: .05em;
    color: var(--fg-cw-button);
}
input.show-content, input.hide-content {
    display: none;
}
div.object-content {
    display: none;
}
input.show-content:checked ~ div.object-content {
    display: block;
}
.blog-header a{
    color: var(--fg-blog-header);
    text-decoration: none
}
.blog-header {
    background-color: var(--bg-blog-header);
    color: var(--fg-blog-header);
    padding: .2em .5em;
    border-top-left-radius: .2em;
    border-top-right-radius: .2em;
}
.more {
    padding-top: .5em;
    width:1.2em;
    height: .8em;
    cursor: pointer;
}
.scope {
    padding: .1em;
}
.line {
    margin: .5em 0;
    padding: .5em 0;
    border-bottom: 1px solid var(--bd-line);
}
.line:first-child {
    margin-top: 0;
}
.line:last-child {
    margin-bottom: 0;
    border-bottom: none;
}
.interaction button {
    border: none;
    background: none;
    cursor: pointer;
    outline: none;
    padding: 0;
    margin: 0;
}
.interactions {
    display:grid;
    grid-template-columns: repeat(16, 1fr);
    grid-gap: .2em;
    background-color: var(--bg-container);
    padding: 1em .5em;
    border-radius: .2em;
}
.interaction-like {
    display: grid;
    /*border: 1px solid black;*/
    justify-content: center;
    align-content: center;
}
.label label {
    display: inline-block;
    width: 5rem;
    text-align: left;
}
.label label:after {
    content: "：";
}
.icon {
    margin-bottom: .3em;
}
.dropdown-menu {
    background: var(--bg-dropdown-menu);
    visibility: hidden;
    opacity: 0;
    min-width: 5rem;
    position: absolute;
    transition: all 0s ease;
    margin-top: 1rem;
    left: 0;
    display: none;
    border-radius: .2em;
    border:1px solid #ddd;
}
.more:hover + .dropdown-menu,
.dropdown-menu:hover{
    visibility: visible;
    opacity: 1;
    display: block;
    left: inherit;
    margin-top: -.5em;
    margin-left: -4.4em;
}
.dropdown-menu .item {
    text-align: center;
    padding: .2em;
}
.dropdown-menu .item:hover{
    background-color: var(--bg-dropdown-menu-hover);
    cursor: pointer;
}
.dropdown-menu .item:hover a {
    color: var(--fg-dropdown-menu-hover);
}
.dropdown-menu .item a {
    color: var(--fg-dropdown-menu);
}
.dropdown-menu .btn {
    display: inline;
    width: 100%;
    margin: 0;
    padding: 0;
    font-size: 1em;
    border: none;
    background-color: var(--bg-dropdown-menu);
    color: var(--fg-dropdown-menu);
}
.dropdown-menu .item:hover .btn {
    background-color: var(--bg-dropdown-menu-hover);
    color: var(--fg-dropdown-menu-hover);
}
/* ... */

